[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "better_crawl_saul"
version = "0.0.1"
dependencies = [
    "icecream==2.1.3",
    "numpy==2.1.1",
    "pandas==2.2.2",
    "pyarrow==17.0.0",
    "vllm>=0.6",
    "outlines>=0.0.39"
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-W ignore::pytest.PytestCollectionWarning"
filterwarnings = [
    "ignore::DeprecationWarning:pyairports.airports",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
select = ["E", "F"]
line-length = 100

# Ignore `F401` violations in any `__init__.py`
per-file-ignores = {"__init__.py" = ["F401"]}
